--- a/index.html
+++ b/index.html
@@ -47,9 +47,8 @@
         <div class="header js-header">
           <div class="header__center center"><a class="header__logo" href="#"><img class="header__pic" src="img/logo.svg" alt=""></a>
             <div class="header__wrap js-header-wrap">
-              <nav class="header__nav"><a class="header__link js-link" href="#main">home</a><a class="header__link js-link" href="#details">the product</a><a class="header__link js-link" href="#features">features</a></nav><a class="header__contact" href="#"><svg class="icon icon-mail">
-                  <use xlink:href="img/sprite.svg#icon-mail"></use>
-                </svg>contact us</a>
+              <nav class="header__nav"><a class="header__link js-link" href="#main">home</a><a class="header__link js-link" href="#details">the product</a><a class="header__link js-link" href="#features">features</a></nav><a class="header__contact" href="#contact">
+                 
             </div><button class="header__burger js-header-burger"></button>
           </div>
           <div class="header__bg js-header-bg"></div>
@@ -161,7 +160,7 @@
           </div>
         </div>
       </div>
-      <div class="features" id="features">
+      <div class="features" id="contact">
         <div class="features__center center">
           <h2 class="features__title title">Contact Us</h2><br>
           <div class="features__category">Phone: +972-544642428 </br>
