--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="header js-header">
           <div class="header__center center"><a class="header__logo" href="#"><img class="header__pic" src="img/logo.svg" alt=""></a>
             <div class="header__wrap js-header-wrap">
-              <nav class="header__nav"><a class="header__link js-link" href="#main">home</a><a class="header__link js-link" href="#details">the product</a><a class="header__link js-link" href="#features">features</a></nav><a class="header__contact" href="#contact"></a>
+              <nav class="header__nav"><a class="header__link js-link" href="#main">home</a><a class="header__link js-link" href="#details">the product</a><a class="header__link js-link" href="#features">features</a></nav><a class="header__contact" href="#contact">contact us</a>
             </div><button class="header__burger js-header-burger"></button>
           </div>
           <div class="header__bg js-header-bg"></div>
